<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SendNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/hasLinkCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/checkbox_include_url" />

                <CheckBox
                    android:id="@+id/alreadyReadCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/checkbox_already_read" />
            </LinearLayout>

            <TextView
                android:id="@+id/labelList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <EditText
                android:id="@+id/itemListEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/item_list"
                android:inputType="text"
                android:singleLine="true" />

            <EditText
                android:id="@+id/itemSublistEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/item_sublist"
                android:inputType="text"
                android:singleLine="true" />

            <EditText
                android:id="@+id/itemUrlEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/item_link"
                android:inputType="textUri|textMultiLine" />

            <EditText
                android:id="@+id/itemTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/item_title"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/itemAuthorEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="10"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/item_author"
                android:inputType="textMultiLine" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/sendNoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        app:backgroundTint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true"
        android:contentDescription="@string/send_fab_content_desc"
        app:srcCompat="@android:drawable/ic_menu_send" />
</androidx.constraintlayout.widget.ConstraintLayout>
